Opened 12 years ago
Closed 11 years ago
#2775 closed bug (fixed)
[Tracker]: when clicking on a symbolic link diskusage isn't shown
Reported by: | emitrax | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Tracker | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
As the summary explains, if you right click on the home link that is on the desktop, diskusage addon is not showed.
Change History (3)
comment:1 by , 11 years ago
comment:2 by , 11 years ago
Indeed, Tracker should detect symlinks (and show all add-ons with Be-symlink support), but also show all add-ons that can work with the target.
comment:3 by , 11 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Should be fixed in hrev32246. Thanks!
Note:
See TracTickets
for help on using tickets.
Hmm, I could add the "application/x-vnd.Be-symlink" in the recognized types for DiskUsage (that would fix this issue), but it would also propose the DiskUsage add-on when you right click on any symlink, even if it points to a regular file rather than a folder. It still works, it will do the DiskUsage, for the parent folder; but it's cluttering the Add-On submenu..
Does it makes sense? Well, in other word, there is a one liner that fixes this, but isn't really optimal.
On the other hand, I think the cleanest solution would be to traverse the symlink and get the mime type of the target to select the usable add-ons..