Now it also considers the MimeType of symlinks targets when proposing add-ons in tracker.

This fixes ticket #2775.


git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@32246 a95241bf-73f2-0310-859d-f6bbb57e9c96